<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/principal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="237dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:text="   APP PARA NIÑOS "
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="299dp"
        android:layout_height="218dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/kids2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo" />

    <RadioGroup
        android:id="@+id/Contenedor"
        android:layout_width="324dp"
        android:layout_height="326dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagen">

        <TextView
            android:id="@+id/Parrafo"
            android:layout_width="248dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:text="@string/parrafo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/Colores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/colores" />

        <RadioButton
            android:id="@+id/Animales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/animales" />

        <RadioButton
            android:id="@+id/Numeros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/numeros" />

        <Button
            android:id="@+id/Aceptar"
            android:layout_width="151dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/aceptar" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>